--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <title>Calculator</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
-    <script src="script.js"></script>
+    <script src="functions.js"></script>
+    <script src="base.js"></script>
 </head>
 <body>
-    
+    <script src="script.js"></script>
 </body>
 </html>
