--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
     <script src="functions.js"></script>
+    <script src="classes.js"></script>
     <script src="base.js"></script>
 </head>
 <body>
+    <div id="main"></div>
     <script src="script.js"></script>
 </body>
 </html>
