--- a/index.html
+++ b/index.html
@@ -11,7 +11,25 @@
     <script src="base.js"></script>
 </head>
 <body>
-    <div id="main"></div>
+    <div id="main">
+        <div class="section base">
+            <h2>База позиций для набора</h2>
+            <div id="base-list"></div>
+        </div>
+<hr>
+        <div class="section set">
+            <h2>Текущий набор позиций для расчета</h2>
+            <div id="set-list"></div>
+            <button id="add-item-btn">Добавить позицию</button>
+        </div>
+<hr>
+        <div class="section result">
+            <h2>Результаты расчета</h2>
+            <div id="result-list"></div>
+            <button id="add-calculator-btn">Добавить расчет</button>
+            <button id="calculate-btn">Расчитать</button>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
