add select of categories

--- a/index.html
+++ b/index.html
@@ -14,18 +14,19 @@
     <div id="main">
         <div class="section base">
             <h2>База позиций для набора</h2>
-            <div id="base-list"></div>
+            <div id="base-nav-element"></div>
+            <div id="base-element"></div>
         </div>
-<hr>
-        <div class="section set">
+        <hr>
+        <div class="section list">
             <h2>Текущий набор позиций для расчета</h2>
-            <div id="set-list"></div>
+            <div id="list-element"></div>
             <button id="add-item-btn">Добавить позицию</button>
         </div>
-<hr>
+        <hr>
         <div class="section result">
             <h2>Результаты расчета</h2>
-            <div id="result-list"></div>
+            <div id="result-element"></div>
             <button id="add-calculator-btn">Добавить расчет</button>
             <button id="calculate-btn">Расчитать</button>
         </div>
