--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
     <script src="base.js"></script>
 </head>
 <body>
+
+    <!--script src="https://cdnjs.cloudflare.com/ajax/libs/alasql/0.3.7/alasql.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.9.2/xlsx.core.min.js"></script-->
+
+    <script src="lib/alasql.min.js"></script>
+    <script src="lib/xlsx.core.min.js"></script>
+
     <div id="main">
         <div class="section base">
             <h2>База позиций для набора</h2>
@@ -21,7 +28,7 @@
         <div class="section list">
             <h2>Текущий набор позиций для расчета</h2>
             <div id="list-element"></div>
-            <button id="add-item-btn">Добавить позицию</button>
+            <button id="add-item-btn">Добавить пустую позицию</button>
         </div>
         <hr>
         <div class="section result">
@@ -31,6 +38,12 @@
             <button id="calculate-btn">Расчитать</button>
         </div>
     </div>
+
+    <hr>
+    
+    <button onclick="exportData()">Экспортировать в Excel</button>
+
+
     <script src="script.js"></script>
 </body>
 </html>
